Fix overflow bug

--- a/frontend/src/components/frame/DataContainer.scss
+++ b/frontend/src/components/frame/DataContainer.scss
@@ -44,7 +44,7 @@
 }
 
 @include desktop {
-  .page-content {
+  .map .page-content {
     overflow: hidden;
   }
 }
